[package]
name = "u256-literal"
version = "1.0.2"
authors = ["Guanqun Lu <guanqunlu@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Procedural macro for converting u256 literals to U256 at compile time."
documentation = "https://docs.rs/u256-literal"
repository = "https://github.com/guanqun/u256-literal"
keywords = ["u256", "proc-macro", "literals", "ethereum"]

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
primitive-types = { version = "0.11", default-features = false }
